--- a/styles/c7_main.css
+++ b/styles/c7_main.css
@@ -54,21 +54,34 @@ header h3 {
 	color: black;
 }
 
-.submenu {
+#nav_menu .submenu {
 	display: none;
 	position: absolute;
 	left: 0;
 	top: 100%;
 	background-color: #800000;
+	list-style: none;
+	padding: 0;
 }
 
 #nav_menu ul li:hover .submenu {
 	display: block;
 }
 
+.submenu li {
+	width: 150px;
+}
+
 .submenu li a {
+	display: block;
 	padding: 10px;
+	text-decoration: none;
 	color: white;
+}
+
+.submenu li a:hover {
+	background-color: #ffcc00;
+	color: black;
 }
 
 /* Content */
